# verfiable-encryption

./: .gitignore  Cargo.toml  README.md
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
