[workspace]
resolver = "2"
members = ["host", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
# using git references here to ensure this matches the submodules in ./lib
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.1" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.1" }